tests/integration/tests/di/ui/fail/unknown_injectable_arg.stderr
error: unknown argument `unknown_arg`. Valid arguments are: scope
 --> tests/di/ui/fail/unknown_injectable_arg.rs:4:14
  |
4 | #[injectable(unknown_arg = "value")]
  |              ^^^^^^^^^^^
